# nlu

./: .gitignore  consts.h  util.c
base64/: base64.c
rtt/rtt_c/: util.h
rtt/rtt_c/base64/: base64.h
rtt/rtt_c/hmac_sha256/: hmac_sha256.c
rtt/rtt_c/tiny_aes/: test.c
rtt/rtt_rust/: Cargo.toml
rtt/rtt_rust/.cargo/: config.toml
rtt/rtt_rust/src/: lib.rs  main.rs
tiny_aes/: aes.h
