[package]
name = "rtt_rust"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
data-encoding = "2.3.2"
hmac-sha256 = "0.1.7"
hex = { version = "0.4.3" }
libaes = "0.6.1"
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10.36" }
reqwest = "0.11.4"
